--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Roast My Job</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="container">
-        <h1>🔥 Roast My Job 🔥</h1>
-        <textarea id="jobInput" placeholder="Paste the job description here..."></textarea>
+      <h1>🔥 Roast My Job 🔥</h1>
+      <textarea
+        id="jobInput"
+        placeholder="Paste the job description here..."
+      ></textarea>
+
+      <div class="button-row">
         <button onclick="roastJob()">Roast My Job</button>
-        <div id="loading" class="hidden">Roasting in progress... 🔥</div>
-        <div id="output"></div>
+        <button id="resetBtn" onclick="resetRoast()">Reset</button>
+      </div>
+
+      <div id="loading" class="hidden">Roasting in progress... 🔥</div>
+      <div id="output"></div>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
