Handle waiting message, resets

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         placeholder="Paste the job description here..."
       ></textarea>
       <div class="button-row">
-        <button onclick="roastJob()">Roast My Job</button>
-        <button id="resetBtn" onclick="resetRoast()">Reset</button>
+        <button onclick="roastJob()">Roast</button>
+        <button id="resetBtn" onclick="resetRoast()">Cleanup</button>
       </div>
       <div id="loading" class="hidden">Roasting in progress... 🔥</div>
       <div id="output"></div>
