--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <div id="output"></div>
       <div class="tipjar">
         <a href="https://buymeacoffee.com/robhorton" target="_blank">
-          ☕ If you like this and feel I've earned it, you could Buy me a
-          coffee.
+          ☕ If this brought you a laugh and helped keep your sanity — buy me a
+          coffee and help fuel the next weird idea.
         </a>
       </div>
     </div>
