Add help message

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
   <body>
     <div class="container">
       <h1>🔥 Roast My Job 🔥</h1>
+      <p class="subtext">
+        Paste a job description. Get roasted. Laugh, learn, or weep quietly.
+      </p>
+      <a href="#" class="whats-this" onclick="toggleInfo(); return false;"
+        >What’s this?</a
+      >
+
+      <div id="infoBox" class="hidden">
+        <p>
+          <strong>Roast My Job</strong> is a fun and insightful AI-powered tool
+          that analyzes job descriptions and provides humorous yet honest
+          feedback about potential workplace red flags. Whether you're job
+          hunting and want to avoid toxic environments, or you're already
+          employed and need a good laugh about your current situation, this tool
+          has got you covered.
+        </p>
+      </div>
+
       <textarea
         id="jobInput"
         placeholder="Paste the job description here..."
