Update buy me a coffee msg

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <div id="output"></div>
       <div class="tipjar">
         <a href="https://buymeacoffee.com/robhorton" target="_blank">
-          ☕ If this brought you a laugh and helped keep your sanity — buy me a
-          coffee and help fuel the next weird idea.
+          ☕ If this made you laugh and helped keep your sanity — buy me a
+          coffee to help fuel the next weird idea.
         </a>
       </div>
     </div>
