Add preview image, add meta information

--- a/index.html
+++ b/index.html
@@ -1,6 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Primary Meta Tags -->
+    <title>Roast My Job – AI-Powered Roasts for Cringey Job Descriptions</title>
+    <link rel="canonical" href="https://roastmyjob.dev" />
+    <meta
+      name="title"
+      content="Roast My Job – AI-Powered Roasts for Cringey Job Descriptions"
+    />
+    <meta
+      name="description"
+      content="An AI tool that hilariously exposes corporate BS, red flags, and cringe in job listings. Come for the laughs, stay for the sanity."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://roastmyjob.dev/" />
+    <meta
+      property="og:title"
+      content="Roast My Job – AI-Powered Roasts for Cringey Job Descriptions"
+    />
+    <meta
+      property="og:description"
+      content="An AI tool that hilariously exposes corporate BS, red flags, and cringe in job listings. Come for the laughs, stay for the sanity."
+    />
+    <meta property="og:image" content="/og-preview.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://roastmyjob.dev/" />
+    <meta
+      name="twitter:title"
+      content="Roast My Job – AI-Powered Roasts for Cringey Job Descriptions"
+    />
+    <meta
+      name="twitter:description"
+      content="An AI tool that hilariously exposes corporate BS, red flags, and cringe in job listings. Come for the laughs, stay for the sanity."
+    />
+    <meta name="twitter:image" content="/og-preview.png" />
+
     <meta charset="UTF-8" />
     <title>Roast My Job</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
